deployment/k8s/inference-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webservice-service
  labels:
    app: webservice-service
spec:
  type: ClusterIP
  selector:
    component: webservice-app
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: web-app
  template:
    metadata:
      labels:
        component: web-app
    spec:
      containers:
        - name: web-app
          image: ghcr.io/adam-tu/remla-project/web-service:latest
          imagePullPolicy: Always
          command: ["sh"]
          args: ["src/startup.sh"]
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: web-service
spec:
  type: ClusterIP
  selector:
    component: web-app
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wwebserevice-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: web-app
  template:
    metadata:
      labels:
        component: web-app
    spec:
      containers:
        - name: web-app
          image: ghcr.io/adam-tu/remla-project/web-service:latest
          imagePullPolicy: Always
          command: ["sh"]
          args: ["src/startup.sh"]
          ports:
            - containerPort: 5000
