deployment/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-service
 annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 rules:
   - http:
      paths:
        - path: /question(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: inference-frontend-service
              port:
                number: 8080
